Add Blood Donation System project to portfolio

--- a/index.html
+++ b/index.html
@@ -437,6 +437,16 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-post">
+              <img src="assets/img/gif/prc.gif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Blood Donation System</h4>
+                <p>Web System - User Control, Login, QR & SMS Integration</p>
+                <a href="assets/img/gif/prc.gif" title="Blood Donation System" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+              </div>
+            </div><!-- End Portfolio Item -->
+
           </div><!-- End Portfolio Container -->
 
         </div>
