Add Web System filter category and categorize Blood Donation System

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
             <li data-filter=".filter-print">Print</li>
             <li data-filter=".filter-post">Post</li>
             <li data-filter=".filter-video">Video</li>
+            <li data-filter=".filter-web">Web System</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -437,11 +438,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-post">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
               <img src="assets/img/gif/prc.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Blood Donation System</h4>
-                <p>Web System - User Control, Login, QR & SMS Integration</p>
+                <p>User Control, Login, QR & SMS Integration</p>
                 <a href="assets/img/gif/prc.gif" title="Blood Donation System" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
