--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
-        <p>Here is my expertice in the field of Video Editing, Graphic Arts and Web Development</p>
+        <h2>Visual Graphics</h2>
+        <p>Here is my expertice in the field of Video Editing and Graphic Arts</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -643,51 +643,58 @@
 
       </div>
 
-      <div class="col-lg-8 text-center">
-        <!-- Chat Icon and Text -->
-        <div class="chat-icon" style="position: relative;">
-          <a href="https://m.me/ianross.pureza" target="_blank">
-            <img src="assets/img/SVG/Chat.svg" alt="Send Message" style="cursor: pointer; width: 300px; height: auto;"> <!-- Adjust the size if needed -->
-          </a>
-          <!-- Tooltip for hover message -->
-          <div class="tooltip">Click to connect</div>
+      <div class="col-lg-8">
+        <div class="map-container" style="border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.3944893564457!2d121.4196!3d14.2856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d9b5b5b5b5b5%3A0x0!2sJacqueline%20Hills%202%2C%20Pagbilao%2C%20Quezon%2C%20Philippines!5e0!3m2!1sen!2sph!4v1670000000000" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <p class="chat-text">Chat with me!</p>
-      </div><!-- End Contact Image -->
-
-      <style>
-        .chat-icon img {
-          transition: filter 0.3s ease-in-out; /* Smooth transition for color change */
-        }
-
-        .chat-icon img:hover {
-          filter: brightness(1.5) hue-rotate(210deg); /* Adjust color to a lighter blue on hover */
-        }
-
-        /* Tooltip styling */
-        .tooltip {
-          position: absolute;
-          bottom: 50%; /* Adjust to be closer to the icon */
-          left: 60%; /* Moved slightly to the right */
-          transform: translate(-50%, 50%); /* Adjust vertical positioning */
-          background-color: rgba(0, 0, 0, 0.7); /* Black background with some transparency */
-          color: white; /* Text color */
-          padding: 5px 10px;
-          border-radius: 5px;
-          opacity: 0; /* Initially hidden */
-          transition: opacity 0.3s ease-in-out; /* Smooth transition for opacity */
-          white-space: nowrap; /* Prevents text wrapping */
-        }
-
-        .chat-icon:hover .tooltip {
-          opacity: 1; /* Show tooltip on hover */
-        }
-      </style>
+      </div><!-- End Map -->
 
     </div>
 
   </div>
 </section><!-- /Contact Section -->
+
+<!-- Floating Messenger Button -->
+<div class="floating-messenger" style="position: fixed; bottom: 30px; right: 30px; z-index: 999;">
+  <a href="https://m.me/ianross.pureza" target="_blank" class="messenger-btn" title="Chat with me on Messenger">
+    <i class="bi bi-chat-dots-fill"></i>
+  </a>
+</div>
+
+<style>
+  /* Floating Messenger Button Styling */
+  .floating-messenger {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 999;
+  }
+
+  .messenger-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    background: linear-gradient(135deg, #0084ff, #00a3ff);
+    border-radius: 50%;
+    color: white;
+    font-size: 28px;
+    box-shadow: 0 4px 12px rgba(0, 132, 255, 0.4);
+    transition: all 0.3s ease-in-out;
+    text-decoration: none;
+    border: none;
+  }
+
+  .messenger-btn:hover {
+    transform: scale(1.15);
+    box-shadow: 0 6px 20px rgba(0, 132, 255, 0.6);
+  }
+
+  .messenger-btn:active {
+    transform: scale(0.95);
+  }
+</style>
 
 
 
