Update Services: Change Web Design to Web System with updated description

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>I offer a comprehensive range of creative services, including logo design, corporate branding, graphic arts, and video editing. Whether you need a cohesive brand identity, eye-catching graphics, or polished video content, I provide tailored solutions that elevate your brand and resonate with your target audience across all media platforms.</p>
+        <p>I offer a comprehensive range of creative and technical services, including logo design, corporate branding, graphic arts, video editing, and system development. Whether you need a cohesive brand identity, eye-catching graphics, polished video content, or a functional and user-friendly system tailored to your needs, I provide customized solutions that elevate your brand and enhance your digital presence across all media platforms.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -574,11 +574,11 @@
             <div class="service-item item-cyan position-relative">
               <div class="icon">
                 <!-- Insert your SVG from the assets folder -->
-                <img src="assets/img/SVG/Web.svg" alt="Branding Icon" width="100" height="100" />
+                <img src="assets/img/SVG/Web.svg" alt="Web System Icon" width="100" height="100" />
               </div>
-              <h3>Web Design</h3>
+              <h3>Web System</h3>
               <p>
-                I provide web design services that blend aesthetics with functionality. By creating visually appealing and user-friendly websites, I ensure a seamless experience for visitors while effectively communicating your brand's message.</p>
+                I develop custom web systems tailored to your business needs. From data management platforms to interactive applications, I create functional and user-friendly solutions that streamline operations and enhance user engagement.</p>
             </div>
           </div><!-- End Service Item -->
 
