--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
       <div class="col-lg-8">
         <div class="map-container" style="border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.036!2d121.41823!3d14.28971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d9c5adc5adcb%3A0x0!2sB1%20L2%264%20Jacqueline%20Hills%202%20Malicboy%2C%20Pagbilao%2C%20Quezon!5e0!3m2!1sen!2sph!4v1702313200000" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.7689!2d121.780842!3d13.985945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b5b5b5b5b5b5%3A0x0!2sJacqueline%20Hills%202%20Malicboy%20Pagbilao%20Quezon!5e0!3m2!1sen!2sph!4v1702400000000" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div><!-- End Map -->
 
