Add web system development to footer text

--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Ian Ross Pureza</h3>
-      <p>"Welcome to my site, where creativity meets strategy to elevate your brand through expert design and marketing solutions. Stay connected and follow me on social media to explore more ways I can help your business grow!"</p>
+      <p>"Welcome to my site, where creativity meets strategy to elevate your brand through expert design, marketing solutions, and web system development. Stay connected and follow me on social media to explore more ways I can help your business grow!"</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.facebook.com/ianross.pureza" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/ianrosspureza/" target="_blank"><i class="bi bi-instagram"></i></a>
