Update professional experience: Add MIS/IT Staff at Sacred Heart College, update Calmar Land position

--- a/index.html
+++ b/index.html
@@ -332,16 +332,28 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Creative Officer</h4>
-              <h5>2024 - Present</h5>
-              <p><em>Calmar Land Development Corporation, Lucena City PH </em></p>
+              <h4>MIS/IT Staff</h4>
+              <h5>July 2024 - Present</h5>
+              <p><em>Sacred Heart College Lucena, Lucena City PH</em></p>
               <ul>
-                <li>Develop and maintain cohesive branding across all digital and print media, ensuring consistent visual identity aligned with corporate standards.</li>
-                <li>Design and produce high-quality graphics, web banners, and print materials that effectively communicate brand messages to target audiences. </li>
-                <li>Lead video editing projects, from concept to final delivery, ensuring accuracy, professionalism, and attention to detail.</li>
-                <li>Collaborate with cross-functional teams to ensure all creative outputs meet brand guidelines and maintain a polished corporate image.</li>
+                <li>Perform technical maintenance and support for school systems and infrastructure.</li>
+                <li>Develop and program school management systems to streamline administrative and academic operations.</li>
+                <li>Assist in website administration and management, ensuring optimal performance and security.</li>
+                <li>Collaborate with IT team and departments to troubleshoot technical issues and implement solutions.</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Creative Officer</h4>
+              <h5>2024 (January - November)</h5>
+              <p><em>Calmar Land Development Corporation, Lucena City PH</em></p>
+              <ul>
+                <li>Developed and maintained cohesive branding across all digital and print media, ensuring consistent visual identity aligned with corporate standards.</li>
+                <li>Designed and produced high-quality graphics, web banners, and print materials that effectively communicated brand messages to target audiences.</li>
+                <li>Led video editing projects, from concept to final delivery, ensuring accuracy, professionalism, and attention to detail.</li>
+                <li>Collaborated with cross-functional teams to ensure all creative outputs met brand guidelines and maintained a polished corporate image.</li>
+              </ul>
+            </div><!-- End Resume Item -->
 
           </div>
 
@@ -655,7 +667,7 @@
 </section><!-- /Contact Section -->
 
 <!-- Floating Messenger Button -->
-<div class="floating-messenger" style="position: fixed; bottom: 30px; right: 30px; z-index: 9999;">
+<div class="floating-messenger" style="position: fixed; bottom: 30px; right: 30px; z-index: 999;">
   <a href="https://m.me/ianross.pureza" target="_blank" class="messenger-btn" title="Chat with me on Messenger">
     <i class="bi bi-chat-dots-fill"></i>
   </a>
@@ -667,7 +679,7 @@
     position: fixed;
     bottom: 30px;
     right: 30px;
-    z-index: 9999;
+    z-index: 999;
   }
 
   .messenger-btn {
