Update Resume section to include web system development expertise

--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Passionate artist with a Computer Science background and TESDA NC3 certification in Graphic Design, blending creativity with technical skills. My love for visual arts drives me to craft unique and impactful designs, from digital media to print. </p>
-        <p>I’m dedicated to bringing artistic vision to life through innovative and engaging visuals that connect with audiences.</p>
+        <p>Passionate artist and developer with a Computer Science background and TESDA NC3 certification in Graphic Design, blending creativity with technical expertise. My love for visual arts and web development drives me to craft unique and impactful designs and functional systems, from digital media to print and custom web applications.</p>
+        <p>I'm dedicated to bringing artistic vision to life through innovative and engaging visuals and robust web systems that connect with audiences and streamline operations.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -333,7 +333,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>MIS/IT Staff</h4>
-              <h5>July 2024 - Present</h5>
+              <h5>July 2025 - Present</h5>
               <p><em>Sacred Heart College Lucena, Lucena City PH</em></p>
               <ul>
                 <li>Perform technical maintenance and support for school systems and infrastructure.</li>
