Update About section to include web system development

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <img src="assets/img/profile-img2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Graphic Artist &amp; Video Editor.</h2>
+            <h2>Graphic Artist, Video Editor &amp; Web Developer.</h2>
             <p class="fst-italic py-3">
-              In graphic arts branding, I excel at crafting distinctive visual identities that resonate with target audiences, utilizing color theory and typography to convey brand messages effectively. My proficiency in video editing complements these skills, allowing me to create engaging multimedia content that enhances brand storytelling and captivates viewers across diverse platforms.
+              In graphic arts branding, I excel at crafting distinctive visual identities that resonate with target audiences, utilizing color theory and typography to convey brand messages effectively. My proficiency in video editing complements these skills, allowing me to create engaging multimedia content that enhances brand storytelling and captivates viewers across diverse platforms. Additionally, I develop custom web systems tailored to business needs, creating functional and user-friendly solutions that streamline operations and enhance digital presence.
             </p>
             <div class="row">
               <div class="col-lg-6">
