Remove redundancies: Simplify About, Resume, Services, and Footer sections for conciseness

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I am a versatile professional skilled in graphic design and web development, merging creativity with technical expertise to deliver captivating visuals and seamless digital experiences.</p>
+        <p>Creative professional blending graphic design, video production, and web development to deliver impactful digital solutions.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -95,9 +95,9 @@
             <img src="assets/img/profile-img2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Graphic Artist, Video Editor &amp; Web Developer.</h2>
+            <h2>Graphic Artist, Video Editor &amp; Web Developer</h2>
             <p class="fst-italic py-3">
-              In graphic arts branding, I excel at crafting distinctive visual identities that resonate with target audiences, utilizing color theory and typography to convey brand messages effectively. My proficiency in video editing complements these skills, allowing me to create engaging multimedia content that enhances brand storytelling and captivates viewers across diverse platforms. Additionally, I develop custom web systems tailored to business needs, creating functional and user-friendly solutions that streamline operations and enhance digital presence.
+              I craft distinctive visual identities through graphic design, create engaging multimedia content via video editing, and develop functional web systems tailored to business needs. My approach combines creative excellence with technical expertise to deliver solutions that resonate with audiences and drive results.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -302,8 +302,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Passionate artist and developer with a Computer Science background and TESDA NC3 certification in Graphic Design, blending creativity with technical expertise. My love for visual arts and web development drives me to craft unique and impactful designs and functional systems, from digital media to print and custom web applications.</p>
-        <p>I'm dedicated to bringing artistic vision to life through innovative and engaging visuals and robust web systems that connect with audiences and streamline operations.</p>
+        <p>Computer Science graduate with TESDA NC3 in Graphic Design, combining design expertise with technical development skills.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -315,17 +314,17 @@
 
             <div class="resume-item pb-0">
               <h4>Ian Ross Pureza</h4>
-              <p><em>Computer Science graduate with a TESDA National Certificate Level 3 in Graphic Design, specializing in company branding. Currently working as a Creative Officer, with expertise in video editing and graphic arts. Skilled in developing cohesive visual identities and crafting impactful digital content. Proficient in industry-standard graphic software, user-centered design, and visual communication strategies that boost brand visibility and audience engagement.</em></p>
+              <p><em>Computer Science graduate with TESDA NC3 certification in Graphic Design. Currently MIS/IT Staff at Sacred Heart College Lucena, with expertise in graphic design, video editing, and web system development. Skilled in creating visual identities, multimedia content, and functional business systems.</em></p>
               
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Science &amp; Computer Science</h4>
+              <h4>Bachelor of Science in Computer Science</h4>
               <h5>2020 - 2024</h5>
               <p><em>Sacred Heart College Lucena City</em></p>
-              <p>Graduated with a focus on computer science, specializing in programming and graphic design. Developed strong technical skills in software development and visual communication, participating in projects that enhanced my creativity and problem-solving abilities. Actively engaged in extracurricular activities, fostering collaboration and community involvement.</p>
-            </div><!-- Edn Resume Item -->
+              <p>Specialized in programming and graphic design with strong technical foundation in software development and visual communication.</p>
+            </div><!-- End Resume Item -->
 
           </div>
 
@@ -529,7 +528,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>I offer a comprehensive range of creative and technical services, including logo design, corporate branding, graphic arts, video editing, and system development. Whether you need a cohesive brand identity, eye-catching graphics, polished video content, or a functional and user-friendly system tailored to your needs, I provide customized solutions that elevate your brand and enhance your digital presence across all media platforms.</p>
+        <p>Creative and technical solutions to elevate your brand and digital presence.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -880,7 +879,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Ian Ross Pureza</h3>
-      <p>"Welcome to my site, where creativity meets strategy to elevate your brand through expert design, marketing solutions, and web system development. Stay connected and follow me on social media to explore more ways I can help your business grow!"</p>
+      <p>"Turning creative vision into strategic results through design, marketing, and technology."</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.facebook.com/ianross.pureza" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/ianrosspureza/" target="_blank"><i class="bi bi-instagram"></i></a>
