Update Resume Summary with enhanced web system development expertise

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
             <div class="resume-item pb-0">
               <h4>Ian Ross Pureza</h4>
-              <p><em>Computer Science graduate with TESDA NC3 certification in Graphic Design. Currently MIS/IT Staff at Sacred Heart College Lucena, with expertise in graphic design, video editing, and web system development. Skilled in creating visual identities, multimedia content, and functional business systems.</em></p>
+              <p><em>Computer Science graduate with TESDA NC3 certification in Graphic Design, specializing in company branding and visual communication. Currently MIS/IT Staff at Sacred Heart College Lucena, with expertise in graphic design, video editing, and web system development. Proficient in industry-standard design software and user-centered web development. Skilled in creating cohesive visual identities, engaging multimedia content, and functional business systems that enhance brand visibility and audience engagement.</em></p>
               
             </div><!-- End Resume Item -->
 
