--- a/index.html
+++ b/index.html
@@ -514,6 +514,16 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
+              <img src="assets/img/gif/crop.gif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Data Analytics & Weather Dashboard</h4>
+                <p>Modern Bootstrap Design, Analytics, Weather Update, CRUD System</p>
+                <a href="assets/img/gif/crop.gif" title="Data Analytics & Weather Dashboard" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+              </div>
+            </div><!-- End Portfolio Item -->
+
           </div><!-- End Portfolio Container -->
 
         </div>
