--- a/index.html
+++ b/index.html
@@ -524,6 +524,16 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
+              <img src="assets/img/gif/inventory.gif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Inventory Management System</h4>
+                <p>Barcode Technology, POS Issuance, Stock Management</p>
+                <a href="assets/img/gif/inventory.gif" title="Inventory Management System" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+              </div>
+            </div><!-- End Portfolio Item -->
+
           </div><!-- End Portfolio Container -->
 
         </div>
