Enhance portfolio project descriptions with detailed, concise 2-3 sentence summaries

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <img src="assets\img\projects\banner.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Print-Photoshop</h4>
-                <p>Project Banner "2x5ft"</p>
+                <p>Professional 2x5ft project banner designed in Photoshop showcasing advanced layout and typography techniques. Combines eye-catching visuals with clear messaging for maximum impact and brand visibility.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -400,7 +400,7 @@
               <img src="assets\img\projects\World.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Photoshop-Canva</h4>                                                                      
-                <p>Branding Post, Gif</p>
+                <p>Animated branding post created for World Environmental Health Day using Photoshop and Canva. Features engaging visuals and smooth transitions designed to promote environmental awareness across social media platforms.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -410,6 +410,7 @@
               <img src="assets/img/projects/Video 1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Video Adds-Premiere/Capcut</h4>
+                <p>Dynamic promotional video created using Adobe Premiere and Capcut with professional color grading, transitions, and sound design. Designed for social media platforms to maximize engagement and brand recall.</p>
                 <p>
                   <a href="https://drive.google.com/file/d/1YwEWl0QS0kjjYs_VPsr05YblweVKLw8q/view?usp=drive_link" title="Play Video">Click this to view</a>
                 </p>
@@ -426,7 +427,7 @@
               <img src="assets/img/projects/Booth.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Mockup Design-Photoshop</h4>
-                <p>Booth</p>
+                <p>Detailed booth mockup design showcasing professional 3D visualization and layout composition in Photoshop. Demonstrates effective spatial design and visual hierarchy for event marketing materials.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -436,7 +437,7 @@
               <img src="assets/img/projects/Mobile.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Image Manipulation-Photoshop</h4>
-                <p>Adds</p>
+                <p>Creative mobile advertisement designed with advanced image manipulation and compositing techniques in Photoshop. Combines compelling imagery with persuasive copy to drive user engagement and conversions.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -446,6 +447,7 @@
               <img src="assets/img/projects/Travel.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Travel Guide-Premiere</h4>
+                <p>Immersive travel guide video produced with Adobe Premiere featuring scenic cinematography, smooth transitions, and engaging narration. Showcases destination highlights while maintaining professional production quality and pacing.</p>
                 <p>
                   <a href="https://drive.google.com/file/d/1MJgUh492wnGl0P6ByCdy8D0IG0b-jj8S/view?usp=sharing" title="Play Video">Click this to view</a>
                 </p>
@@ -462,7 +464,7 @@
               <img src="assets/img/projects/Finance.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Adds-Photoshop</h4>
-                <p>Pag-ibig Financing</p>
+                <p>Professional financing advertisement for Pag-ibig using Photoshop with persuasive visual design and clear call-to-action. Combines real estate imagery with compelling messaging to promote home financing solutions.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -472,7 +474,7 @@
               <img src="assets/img/projects/Houses.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Image Manipulation-Photoshop</h4>
-                <p>Houses adds</p>
+                <p>Real estate advertisement featuring advanced image manipulation and digital enhancement in Photoshop. Creates compelling visual narratives that highlight property features and drive buyer interest through professional styling.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -482,7 +484,7 @@
               <img src="assets/img/projects/Segment.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Photoshop-Premiere</h4>
-                <p>Animation-Segment-Branding</p>
+                <p>Animated branding segment combining Photoshop design with Premiere video production featuring custom animations and motion graphics. Creates visually striking branded content designed to capture attention and reinforce brand identity.</p>
                 <p>
                   <a href="https://drive.google.com/file/d/1beA_Z9ov-XsGf8Q1Whu5jGSkOlULJVjM/view?usp=sharing" title="Play Video">Click this to view</a>
                 </p>
@@ -498,7 +500,7 @@
               <img src="assets\img\projects\Shirt.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Print-Photoshop</h4>
-                <p>Project Sublimation Mockup</p>
+                <p>High-quality sublimation mockup design showcasing professional apparel branding in Photoshop. Demonstrates realistic fabric rendering and color accuracy for merchandise presentation and product visualization.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -508,7 +510,7 @@
               <img src="assets/img/gif/prc.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Blood Donation System</h4>
-                <p>User Control, Login, QR & SMS Integration</p>
+                <p>Comprehensive web-based blood donation management system featuring user authentication, donor profile management, and QR code scanning for rapid identification. Integrates SMS notifications to keep donors informed and streamline the donation process for healthcare facilities.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -518,7 +520,7 @@
               <img src="assets/img/gif/crop.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Data Analytics & Weather Dashboard</h4>
-                <p>Modern Bootstrap Design, Analytics, Weather Update, CRUD System</p>
+                <p>Modern responsive dashboard built with Bootstrap 5 featuring real-time data analytics, interactive weather updates, and comprehensive CRUD operations. Combines intuitive data visualization with a clean, professional interface for business intelligence and environmental monitoring.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
@@ -528,7 +530,7 @@
               <img src="assets/img/gif/inventory.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Inventory Management System</h4>
-                <p>Barcode Technology, POS Issuance, Stock Management</p>
+                <p>Scalable inventory management platform integrating barcode technology for automated stock tracking and POS system issuance capabilities. Streamlines warehouse operations and retail transactions while providing real-time inventory visibility and accurate stock management.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
