Add Watch Video buttons to all video projects with professional styling

--- a/index.html
+++ b/index.html
@@ -411,12 +411,10 @@
               <div class="portfolio-info">
                 <h4>Video Adds-Premiere/Capcut</h4>
                 <p>Dynamic promotional video created using Adobe Premiere and Capcut with professional color grading, transitions, and sound design. Designed for social media platforms to maximize engagement and brand recall.</p>
-                <p>
-                  <a href="https://drive.google.com/file/d/1YwEWl0QS0kjjYs_VPsr05YblweVKLw8q/view?usp=drive_link" title="Play Video">Click this to view</a>
-                </p>
+                <a href="https://drive.google.com/file/d/1YwEWl0QS0kjjYs_VPsr05YblweVKLw8q/view?usp=drive_link" target="_blank" class="btn btn-sm btn-primary watch-video-btn"><i class="bi bi-play-fill"></i> Watch Video</a>
                 <span class="preview-icon">
                   <i class="bi bi-zoom-in"></i>
-                </a>
+                </span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"> -->
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
@@ -448,12 +446,10 @@
               <div class="portfolio-info">
                 <h4>Travel Guide-Premiere</h4>
                 <p>Immersive travel guide video produced with Adobe Premiere featuring scenic cinematography, smooth transitions, and engaging narration. Showcases destination highlights while maintaining professional production quality and pacing.</p>
-                <p>
-                  <a href="https://drive.google.com/file/d/1MJgUh492wnGl0P6ByCdy8D0IG0b-jj8S/view?usp=sharing" title="Play Video">Click this to view</a>
-                </p>
+                <a href="https://drive.google.com/file/d/1MJgUh492wnGl0P6ByCdy8D0IG0b-jj8S/view?usp=sharing" target="_blank" class="btn btn-sm btn-primary watch-video-btn"><i class="bi bi-play-fill"></i> Watch Video</a>
                 <span class="preview-icon">
                   <i class="bi bi-zoom-in"></i>
-                </a>
+                </span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"> -->
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
@@ -485,12 +481,10 @@
               <div class="portfolio-info">
                 <h4>Photoshop-Premiere</h4>
                 <p>Animated branding segment combining Photoshop design with Premiere video production featuring custom animations and motion graphics. Creates visually striking branded content designed to capture attention and reinforce brand identity.</p>
-                <p>
-                  <a href="https://drive.google.com/file/d/1beA_Z9ov-XsGf8Q1Whu5jGSkOlULJVjM/view?usp=sharing" title="Play Video">Click this to view</a>
-                </p>
+                <a href="https://drive.google.com/file/d/1beA_Z9ov-XsGf8Q1Whu5jGSkOlULJVjM/view?usp=sharing" target="_blank" class="btn btn-sm btn-primary watch-video-btn"><i class="bi bi-play-fill"></i> Watch Video</a>
                 <span class="preview-icon">
                   <i class="bi bi-zoom-in"></i>
-                </a>
+                </span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"> -->
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
@@ -898,6 +892,36 @@
     justify-content: center;
     font-size: 20px;
     color: #0d6efd;
+  }
+
+  /* Watch Video Button Styling */
+  .watch-video-btn {
+    margin-top: 12px;
+    padding: 8px 16px !important;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    background-color: #0d6efd !important;
+    border: none !important;
+    text-decoration: none;
+  }
+
+  .watch-video-btn:hover {
+    background-color: #0b5ed7 !important;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(13, 110, 253, 0.4);
+  }
+
+  .watch-video-btn i {
+    font-size: 16px;
+  }
+
+  .watch-video-btn:visited {
+    color: white !important;
   }
 
   .portfolio-modal .modal-overlay {
