--- a/index.html
+++ b/index.html
@@ -896,18 +896,22 @@
 
   /* Watch Video Button Styling */
   .watch-video-btn {
-    margin-top: 12px;
-    padding: 8px 16px !important;
+    margin-top: 30px;
+    padding: 12px 32px !important;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     border-radius: 5px;
     transition: all 0.3s ease;
-    display: inline-flex;
+    display: flex;
     align-items: center;
-    gap: 8px;
+    justify-content: center;
+    gap: 10px;
     background-color: #0d6efd !important;
     border: none !important;
     text-decoration: none;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .watch-video-btn:hover {
@@ -917,7 +921,7 @@
   }
 
   .watch-video-btn i {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .watch-video-btn:visited {
