Enhance Blood Donation System description with event management, user control, and published system status

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
               <img src="assets/img/gif/prc.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Blood Donation System</h4>
-                <p>Comprehensive web-based blood donation management system featuring user authentication, donor profile management, and QR code scanning for rapid identification. Integrates SMS notifications to keep donors informed and streamline the donation process for healthcare facilities.</p>
+                <p>Fully functional and published web-based blood donation management system with comprehensive event management, advanced user control, and role-based access. Features user authentication, donor profile management, QR code scanning for rapid identification, and SMS notifications—streamlining the donation process for healthcare facilities while maintaining donor records and campaign tracking.</p>
                 <span class="preview-icon"><i class="bi bi-zoom-in"></i></span>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
